--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="conteudo">
         <div class="calculator">
             <p class="result" id="resultado" >   </p>
-            <p class="historico" id="history" name="history"> </p>
+            <p class="historico" id="history" ></p>
 
             <table>
                 <tr>
